0.547 (02.12.2007) - John Siracusa <siracusa@mindspring.com>

    * Eliminated redundant validation of fields in nested forms.
    * Made is_empty() smarter about honoring the trim_spaces() setting.
    * Fixed a bug that caused option containers to fail to display hidden
      fields when a selected option had a false, but defined value.
      (Reported by Andrei Kozovski)
    * Fixed a bug that caused a fatal error when requesting a subfield of a
      compound field from a from that does not contain the parent field.
    * Fixed a bug that caused input_value() in on/off groups to treat any
      reference as an array reference.  (Reported by Derek Watson)

0.546 (01.15.2007) - John Siracusa <siracusa@mindspring.com>

    * Fixed a bug that prevented params() from correctly cascading to
      nested forms.
    * Added a field_value() method to the Compound field class.
      (Suggested by Guillermo Roditi)
    * Added a cascade parameter to validate(), which defaults to true.
      (Suggested by Guillermo Roditi)

0.545 (12.08.2006) - John Siracusa <siracusa@mindspring.com>

    * Added param_exists_for_field() method to Rose::HTML::Form.
    * Added positive() and negative() methods to integer fields.
    * Fixed a bug that caused validation to fail for certain compound 
      fields with labels.  (Reported by Guillermo Roditi)
    * Improved error messages for empty, split datetime fields.
    * Added class mapping for the "int" and "integer" field types.
    * Corrected the construction of the string overflow error message.
    * Improved importing of message constants.
    * Fixed a bug that caused a field in a nested form with the same
      name as a field in its parent form to become invisible.
    * Made nested form/field name conflicts fatal.

0.544 (11.29.2006) - John Siracusa <siracusa@mindspring.com>

    * Added a field_value() method to Rose::HTML::Form.  (Suggested by
      Guillermo Roditi)